<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlack"
    android:id="@+id/rl"
    android:padding="15dp"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/listen_rl"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1">
        <com.example.apple.wyymusic.icon.FontIconView
            android:layout_marginTop="18dp"
            android:onClick="exit"
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/arrow"
            android:layout_marginRight="15dp" />
        <TextView
            android:text="android"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/listen_title_tv"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/listen_artist_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/listen_title_tv"
            android:layout_below="@id/listen_title_tv"
            android:layout_marginTop="5dp"
            android:text="android"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </RelativeLayout>
    <ImageView
            android:id="@+id/listen_changpian_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher" />
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="15dp">
        <RelativeLayout
            android:id="@+id/listen_play"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp">
            <com.example.apple.wyymusic.icon.FontIconView
                android:onClick="playStatus"
                android:id="@+id/listen_pause_img"
                android:text="@string/musicPlay"
                android:textSize="48sp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp" />
            <com.example.apple.wyymusic.icon.FontIconView
                android:onClick="playStatus"
                android:id="@+id/listen_back_img"
                android:text="@string/pre"
                android:textSize="28sp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:layout_toLeftOf="@id/listen_pause_img" />
            <com.example.apple.wyymusic.icon.FontIconView
                android:onClick="playStatus"
                android:id="@+id/listen_next_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/next"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/listen_pause_img" />
            <com.example.apple.wyymusic.icon.FontIconView
                android:id="@+id/play_mode_img"
                android:text="@string/list_loop"
                android:textAlignment="textEnd"
                android:textSize="28sp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:layout_toLeftOf="@id/listen_back_img" />
            <com.example.apple.wyymusic.icon.FontIconView
                android:id="@+id/download_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/download"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/listen_next_img" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/listen_play"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <TextView
                android:id="@+id/listen_current_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="0:00" />
            <SeekBar
                android:id="@+id/listen_jindutiao_sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:textColor="@color/gray"
                android:id="@+id/listen_length_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02:30" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
