<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.apple.wyymusic.fragment.FindFragment">

    <!-- TODO: Update blank fragment layout -->
   <com.youth.banner.Banner
       android:id="@+id/banner"
       android:layout_width="match_parent"
       android:layout_height="125dp"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp">
   </com.youth.banner.Banner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">
        <com.example.apple.wyymusic.icon.FontIconView
            android:layout_weight="1"
            android:text="@string/calendar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="2dip"
            android:textAlignment="center"
            android:paddingTop="9dp"
            android:background="@drawable/red_circle"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="25dp"/>
        <com.example.apple.wyymusic.icon.FontIconView
            android:layout_weight="1"
            android:text="@string/song_sheet"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="2dip"
            android:textAlignment="center"
            android:paddingTop="9dp"
            android:background="@drawable/red_circle"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="25dp"/>
        <com.example.apple.wyymusic.icon.FontIconView
            android:layout_weight="1"
            android:text="@string/ranking"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="2dip"
            android:textAlignment="center"
            android:paddingTop="11dp"
            android:background="@drawable/red_circle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="25dp"/>
        <com.example.apple.wyymusic.icon.FontIconView
            android:layout_weight="1"
            android:text="@string/transceiver"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="2dip"
            android:textAlignment="center"
            android:paddingTop="11dp"
            android:background="@drawable/red_circle"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="25dp"/>
        <com.example.apple.wyymusic.icon.FontIconView
            android:layout_weight="1"
            android:text="@string/microphone"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="2dip"
            android:textAlignment="center"
            android:paddingTop="9dp"
            android:background="@drawable/red_circle"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp">
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:text="推荐"
            android:layout_marginRight="25dp"/>
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:text="歌单"
            android:layout_marginRight="25dp"/>
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:text="排行榜"
            android:layout_marginRight="25dp"/>
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:text="电台"
            android:layout_marginRight="25dp"/>
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:text="直播"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightGray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="推荐歌单"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingRight="15dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivSongSheet1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tvSongSheet1"
                android:text="一周日语新歌推荐"
                android:textColor="@color/lightBlack"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:paddingRight="15dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivSongSheet2"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tvSongSheet2"
                android:text="巨蟹座｜夏月初上，语挚情长"
                android:textColor="@color/lightBlack"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:paddingRight="15dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivSongSheet3"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tvSongSheet3"
                android:text="【节奏控】超带感特别推荐BGM"
                android:textColor="@color/lightBlack"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="15dp">
            <ImageView
                android:id="@+id/ivSongSheet4"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tvSongSheet4"
                android:lines="2"
                android:ellipsize="end"
                android:text="凉城夏日＆在盛夏里，饮一杯清凉纯音水"
                android:textColor="@color/lightBlack"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="15dp">
            <ImageView
                android:id="@+id/ivSongSheet5"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tvSongSheet5"
                android:text="『学霸模式』只要学不死，就往死里学"
                android:lines="2"
                android:ellipsize="end"
                android:textColor="@color/lightBlack"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="15dp">
            <ImageView
                android:id="@+id/ivSongSheet6"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tvSongSheet6"
                android:text="学习用『纯音乐』（欢迎补充）"
                android:textColor="@color/lightBlack"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
